edit done on service1 folder

--- a/service1/instance.yaml
+++ b/service1/instance.yaml
@@ -1,4 +1,6 @@
-AWSTemplateFormatVersion: "2010-09-09"
+iiiiiii
+iiiiii
+iiAWSTemplateFormatVersion: "2010-09-09"
 Description: A sample template
 Resources:
   MyEC2Instance: #An inline comment
