--- a/.github/workflows/git.yaml
+++ b/.github/workflows/git.yaml
@@ -1,6 +1,7 @@
-name: learn-github-actions
-run-name: ${{ github.actor }} is learning GitHub Actions
-on: [push]
+on: 
+  push:
+    branches:
+     - master
 jobs:
   run_tests:
     runs-on: ubuntu-20.04
