--- a/.github/workflows/git.yaml
+++ b/.github/workflows/git.yaml
@@ -7,8 +7,11 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
+       with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
     - name: Run script file
       run: |
          chmod +x ./public/scripts/test.sh
          ./public/scripts/test.sh
       shell: bash
+     
