--- a/.github/workflows/git.yaml
+++ b/.github/workflows/git.yaml
@@ -24,6 +24,6 @@ jobs:
          git remote add service1 https://github.com/saiboby/service1.git
          git subtree pull --prefix=demo1 service1 master
          #git push https://github.com/saiboby/mainservice.git master
-         git push https://saiboby:${{ secrets.GITHUB_TOKEN }}@github.com/saiboby/service1.git master
+         git push https://saiboby:${{ secrets.API_TOKEN_GITHUB }}@github.com/saiboby/mainservice.git master
       shell: bash
      
