--- a/.github/workflows/git.yaml
+++ b/.github/workflows/git.yaml
@@ -15,7 +15,8 @@ jobs:
          export GIT_MERGE_AUTOEDIT=no
          sudo apt-get install git -y
          cd /opt
-         Omit --global
+         git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+         git config --local user.name "github-actions[bot]"
          git clone https://github.com/saiboby/mainservice.git
          cd mainservice
          git checkout master
@@ -23,7 +24,7 @@ jobs:
          git subtree pull --prefix=demo1 service1 master
          git commit --amend -m "files from service1 repo"
          #git push https://github.com/saiboby/mainservice.git master
-         git push https://saiboby:${{ secrets.API_TOKEN_GITHUB }}@github.com/saiboby/mainservice.git master
+         git push https://${{ secrets.API_TOKEN_GITHUB }}@github.com/saiboby/mainservice.git master
          #kk
       shell: bash
      
