--- a/.github/workflows/git.yaml
+++ b/.github/workflows/git.yaml
@@ -15,8 +15,8 @@ jobs:
          export GIT_MERGE_AUTOEDIT=no
          sudo apt-get install git -y
          cd /opt
-         git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
-         git config --local user.name "github-actions[bot]"
+         git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+         git config --global user.name "github-actions[bot]"
          git clone https://github.com/saiboby/mainservice.git
          cd mainservice
          git checkout master
