--- a/.github/workflows/git.yaml
+++ b/.github/workflows/git.yaml
@@ -3,7 +3,7 @@ on:
     branches:
      - master
 jobs:
-  run_tests:
+  Merge_Code:
     runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
