--- a/.github/workflows/git.yaml
+++ b/.github/workflows/git.yaml
@@ -3,8 +3,8 @@ on:
     types:
      - opened
      - edited
-#     branches:
-#      - master
+    branches:
+     - test1
 jobs:
   Merge_Code:
     runs-on: ubuntu-20.04
