--- a/.github/workflows/git.yaml
+++ b/.github/workflows/git.yaml
@@ -12,6 +12,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Run script file
       run: |
+         apt-get install git -y
          chmod +x ./public/scripts/test.sh
          git checkout ${GITHUB_HEAD_REF}
          git branch
