--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -55,19 +55,36 @@ jobs:
 
     - name: Generate the badge SVG image
       uses: emibcn/badge-action@v2.0.2
-      id: badge1
+      id: badge
       with:
         label: 'Test1 coverage'
         status: ${{ steps.coverage.outputs.lines }}
         color: 'red,555,daf'
         path: ${{ steps.coverage.outputs.path1 }}    
 
-    # - name: Upload badge as artifact
-    #   uses: actions/upload-artifact@v3
-    #   with:
-    #     name: badge
-    #     path: ${{ steps.coverage.outputs.path }}
-    #     if-no-files-found: error
+    - name: Generate the badge SVG image
+      uses: emibcn/badge-action@v2.0.2
+      id: badge
+      with:
+        label: 'Test coverage1'
+        status: ${{ steps.coverage.outputs.lines }}
+        color: 'green,555,daf'
+        path: ${{ steps.coverage.outputs.path }}
+
+
+    - name: Upload badge as artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: badge
+        path: ${{ steps.coverage.outputs.path }}
+        if-no-files-found: error
+
+    - name: Upload badge as artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: badge1
+        path: ${{ steps.coverage.outputs.path1 }}
+        if-no-files-found: error    
 
     - name: Commit badge
       continue-on-error: true
