--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,6 +33,21 @@ jobs:
         echo "path1=${BADGE1_PATH}" >> "${GITHUB_OUTPUT}"
         echo "path2=${BADGE2_PATH}" >> "${GITHUB_OUTPUT}"
         echo "branch=${BRANCH}" >> "${GITHUB_OUTPUT}"
+
+    - name: listPullRequests
+      uses: buildsville/list-pull-requests@v1
+      id: list
+      with:
+        token: ${{secrets.API_TOKEN}}
+        skip_hour: '24'
+
+    - name: exportingprlist
+      id: prcount
+      env: 
+        pr_count_path: ${{ steps.extract_branch.outputs.branch }}/pr_count_badge.svg        
+      run: |        
+        echo "pr_Count=${pr_count_path}" >> "${GITHUB_OUTPUT}"
+
       
 
     - uses: actions/checkout@v3
@@ -71,7 +86,16 @@ jobs:
         label: 'Test2 coverage'
         status: ${{ steps.coverage.outputs.lines }}
         color: 'green,555,daf'
-        path: ${{ steps.coverage.outputs.path2 }}        
+        path: ${{ steps.coverage.outputs.path2 }}
+
+    - name: Generate the PR badge SVG image
+      uses: emibcn/badge-action@v2.0.2
+      id: badge3
+      with:
+        label: 'PR Count'
+        status: ${{ steps.list.outputs.pulls }}
+        color: 'green,555,daf'
+        path: ${{ steps.prcount.outputs.pr_count }}            
 
     # - name: Upload badge as artifact
     #   uses: actions/upload-artifact@v3
@@ -93,10 +117,12 @@ jobs:
         BADGE: ${{ steps.coverage.outputs.path }}
         BADGE1: ${{ steps.coverage.outputs.path1 }}
         BADGE2: ${{ steps.coverage.outputs.path2 }}
+        BADGE3: ${{ steps.prcount.outputs.pr_count }}
+
       run: |
         git config --local user.email "saibabu.tan@gmail.com"
         git config --local user.name "saiboby"
-        git add "${BADGE}" "${BADGE1}" "${BADGE2}" 
+        git add "${BADGE}" "${BADGE1}" "${BADGE2}"  "{BADGE3}"
         git commit -m "Add/Update badge"
     - name: Push badge commit
       uses: ad-m/github-push-action@master
