--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,11 +44,9 @@ jobs:
     - name: exportingprlist
       id: prcount
       env: 
-        pr_count_path: ${{ steps.extract_branch.outputs.branch }}/pr_count_badge.svg        
+        prcountpath: ${{ steps.extract_branch.outputs.branch }}/pr_count_badge.svg        
       run: |        
-        echo "pr_Count=${pr_count_path}" >> "${GITHUB_OUTPUT}"
-
-      
+        echo "prcount=${prcountpath}" >> "${GITHUB_OUTPUT}"      
 
     - uses: actions/checkout@v3
       with:
@@ -95,7 +93,7 @@ jobs:
         label: 'PR Count'
         status: ${{ steps.list.outputs.pulls }}
         color: 'green,555,daf'
-        path: ${{ steps.prcount.outputs.pr_count }}            
+        path: ${{ steps.prcount.outputs.prcount }}            
 
     # - name: Upload badge as artifact
     #   uses: actions/upload-artifact@v3
@@ -117,7 +115,7 @@ jobs:
         BADGE: ${{ steps.coverage.outputs.path }}
         BADGE1: ${{ steps.coverage.outputs.path1 }}
         BADGE2: ${{ steps.coverage.outputs.path2 }}
-        BADGE3: ${{ steps.prcount.outputs.pr_count }}
+        BADGE3: ${{ steps.prcount.outputs.prcount }}
 
       run: |
         git config --local user.email "saibabu.tan@gmail.com"
