--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,7 +30,7 @@ jobs:
         BADGE_PATH: ${{ steps.extract_branch.outputs.branch }}/test-badge.svg
         BADGE1_PATH: ${{ steps.extract_branch.outputs.branch }}/test1-badge.svg
         BADGE2_PATH: ${{ steps.extract_branch.outputs.branch }}/test2-badge.svg
-        prcountpath: ${{ steps.extract_branch.outputs.branch }}/pr_count_badge.svg        
+        prcountpath: ${{ steps.extract_branch.outputs.branch }}/pr-badge.svg        
         BRANCH: badges
       run: |
         # Generates a GitHub Workflow output named `lines` with a coverage value
@@ -86,7 +86,7 @@ jobs:
       id: badge3
       with:
         label: 'PR Count'
-        status: '55'
+        status: ${{ steps.coverage.outputs.lines }}
         color: 'green,555,daf'
         path: ${{ steps.coverage.outputs.prcount }}            
 
